--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     align-items: center;
     min-height: 100vh;  
     margin: 0;
-    background-color: #a27d7d;
+    background-color: #f0f0f0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
 .kartu{
